# libtaquinsolve

./: .gitignore  .travis.yml  ASolver.cc  ASolver.hh  BFSDatabaseGenerator.cc  BFSDatabaseGenerator.hh  Board.cc  Board.hh  IDASolver.cc  IDASolver.hh  Makefile.am  PartialBoard.cc  PartialBoard.hh  README.md  Solver.cc  Solver.hh  configure  configure.ac  output  taquinsolve.cc  taquinsolve.hh  test.cc
src/: ASolver.cc  BFSDatabaseGenerator.cc  BFSDatabaseGenerator.hh  Board.cc  Board.hh  IDASolver.cc  IDASolver.hh  Makefile.am  Solver.cc  taquinsolve.cc  taquinsolve.hh
test/: Makefile.am  check-generate-patterndb.cc  check-generate-puzzles.cc  check-invalid-puzzles.cc  check-random-puzzles.cc  check-solvable-puzzles.cc  check-solved-puzzles.cc  check-unsolvable-puzzles.cc  test.cc
