lib_LTLIBRARIES = libtaquinsolve.la
libtaquinsolve_la_SOURCES = taquinsolve.cc \
                            Board.cc \
                            PartialBoard.cc \
                            ASolver.cc \
                            IDASolver.cc \
                            BFSDatabaseGenerator.cc

include_HEADERS =   taquinsolve.hh \
                    Board.hh \
                    PartialBoard.hh \
                    ASolver.hh \
                    IDASolver.hh \
                    BFSDatabaseGenerator.hh

ACLOCAL_AMFLAGS = -I m4
