lib_LTLIBRARIES = libtaquinsolve.la
libtaquinsolve_la_SOURCES = taquinsolve.cc \
                            Board.cc \
                            ASolver.cc \
                            IDASolver.cc \
                            BFSDatabaseGenerator.cc \
                            Solver.cc

include_HEADERS =   taquinsolve.hh \
                    Board.hh \
                    ASolver.hh \
                    IDASolver.hh \
                    BFSDatabaseGenerator.hh \
                    Solver.hh

ACLOCAL_AMFLAGS = -I m4
