libtaquinsolve_la_CXXFLAGS = -lstdc++fs

lib_LTLIBRARIES = libtaquinsolve.la

libtaquinsolve_la_SOURCES = taquinsolve.cc \
                            Board.cc \
                            IDASolver.cc \
                            BFSDatabaseGenerator.cc \
                            Solver.cc

include_HEADERS =   taquinsolve.hh \
                    Board.hh \
                    IDASolver.hh \
                    BFSDatabaseGenerator.hh \
                    Solver.hh
