LDADD = $(top_srcdir)/src/libtaquinsolve.la

bin_PROGRAMS = test

test_SOURCES = test.cc

include_HEADERS =   ../src/taquinsolve.hh \
                    ../src/Board.hh \
                    ../src/ASolver.hh \
                    ../src/IDASolver.hh \
                    ../src/BFSDatabaseGenerator.hh \
                    ../src/Solver.hh

TESTS = test