LDADD = $(top_srcdir)/src/libtaquinsolve.la

check_PROGRAMS = \
    check-generate-patterndb \
    check-generate-puzzles \
    check-solvable-puzzles \
    check-unsolvable-puzzles \
    check-solved-puzzles

AM_DEFAULT_SOURCE_EXT = .cc

include_HEADERS =   ../src/taquinsolve.hh

TESTS = $(check_PROGRAMS)