LDADD = $(top_srcdir)/src/libtaquinsolve.la

check_PROGRAMS = \
    check-generate-patterndb \
    check-generate-puzzles \
    check-solvable-puzzles \
    check-unsolvable-puzzles \
    check-solved-puzzles \
    check-random-puzzles \
    check-invalid-puzzles

AM_DEFAULT_SOURCE_EXT = .cc

TESTS = $(check_PROGRAMS)